[tool.poetry]
name = "rk4-nbody"
version = "0.1.0"
description = "rk4 N body"
authors = ["WizzyGeek"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "rk4nbody"
from = "src"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
